namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopfer-app
  labels:
    name: shopfer-app
